2009-05-12  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on
	  semantic highlighting.

2009-05-11  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Fixed "Bug 501995 - Find
	  and Replace skips first occurrence if 'Find Next' pressed".

2009-05-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on
	  highlighting engine to better support customized
	  highlighting.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/SimpleEditMode.cs: Add subword actions for
	  Linux/Windows as well as Mac.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/Platform.cs: Fixed build with GTK# 2.8.

2009-04-30  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/EmacsWordFindStrategy.cs: Fix subword
	  behaviour on digits boundaries. Tidy using type alias.

2009-04-30  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/SharpDevelopWordFindStrategy.cs: Make a
	  method private.

	* Mono.TextEditor/EmacsWordFindStrategy.cs: Implement subword
	  splitting (camelCase/PascalCase).

2009-04-30  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/SharpDevelopWordFindStrategy.cs: Implement
	  subword (camelCase/PascalCase) word splitting.

	* Mono.TextEditor/EmacsWordFindStrategy.cs: Track API.

2009-04-30  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/DefaultEditActions.cs: Improved removing
	  trailing whitespace feature.
