@@ -1,3 +1,8 @@
+2009-05-13  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Worked on
+	  semantic highlighting.
+
 2009-05-12  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextEditor.cs:
